Fix PR comments